[package]
name = "arbogen2"
version = "0.1.0"
authors = ["Frederic Peschanski <fredokun@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
rand = "0.7"
rand_xoshiro = { version = "0.4", features = ["serde1"]}
