[package]
name = "arbogen2"
version = "0.1.0"
authors = ["Frederic Peschanski <fredokun@github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.154"
serde_json = "1.0.94"
rand = "0.8.5"
rand_xoshiro = { version = "0.6", features = ["serde1"]}
